kubernetes/prod/app-prod-deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prod-api-deployment
  labels:
    app: flask-api
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: danakim/fqhcs-app:1.0  # Update with your image name and tag
        ports:
        - containerPort: 5000  # Adjust port if needed
        volumeMounts:
        - name: data-volume
          mountPath: /app/data  # Adjust mount path as needed
      volumes:
      - name: data-volume
        emptyDir: {}
