kubernetes/prod/app-prod-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-db-service
spec:
  selector:
    app: redis-db
  ports:
  - protocol: TCP
    port: 6379
